Aligned pipboy to center , fixed body background  color , reduced timeout

--- a/style.css
+++ b/style.css
@@ -1,6 +1,23 @@
-body {
-    background-color: #222;
+* {
+    padding:0;
+    margin: 0;
+    box-sizing: border-box;
 }
+body {
+    width: 100vw;
+    height: 100vh;
+    background-color: #000;
+}
+
+.container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .pipboy-img-container {
     position: relative;
     width: max-content;
